# ClickHouseSimulation

./: .gitignore  CMakeLists.txt  outline.md  query.csv  query_generator.csv  query_generator.py
data/: exp_exp_FCFS.csv  exp_exp_SJF.csv  visualization.html  visualization.ipynb
include/: CMakeLists.txt  Makefile  block.hpp  generation.cpp  generation.hpp  phase.hpp  policy.hpp  query.hpp  query_generation.cpp  query_generation.hpp  simulation.cpp  simulation.hpp
src/: CMakeLists.txt  Makefile  main  main.cpp
test/: CMakeLists.txt  test_simulation.cpp
